--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ plugins:
 
 # Custom vars
 version:             1.1.0
-google_analytics_id: #UA-XXXX-Y
+google_analytics_id: MJ3E2VC6SJ
 
 # Build settings
 markdown:            kramdown
