chore: new header

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: bundle install
 
+      - name: Clean Jekyll cache
+        run: bundle exec jekyll clean
+
       - name: Build site
         run: bundle exec jekyll build
         env:
