--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-remote-theme
 
 # Custom vars
 version:             1.1.0
@@ -62,5 +63,5 @@ exclude:
 
 
 # If you're using the Lanyon theme
-theme: jekyll-theme-lanyon  # Or remote_theme if using a GitHub-hosted theme
-Step 5: Commit and Push Changes
+# theme: jekyll-theme-lanyon  # This theme is not supported by GitHub Pages
+remote_theme: poole/lanyon  # Use remote_theme instead
