--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -5,43 +5,52 @@ on:
     branches:
       - main  # or master, whichever is your default branch
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Permissions explanation:
+# - contents: write → Required to push built site to gh-pages branch
+# - pages: write → Required for GitHub Pages configuration
+# - id-token: write → Retained for potential future API-based deployments
 permissions:
-  contents: write  # Changed from read to write to allow pushing to gh-pages
+  contents: write
   pages: write
   id-token: write
 
+# Prevent parallel builds to avoid conflicts during deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
+  # Combined job for build and deployment to match repository configuration
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
         
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3.0' # Use a version that GitHub Pages supports
-          bundler-cache: true # Speeds up subsequent runs
+          # Using a Ruby version compatible with GitHub Pages environment
+          ruby-version: '3.3.0'
+          bundler-cache: true
         
       - name: Install dependencies
         run: |
           bundle config set --local path vendor/bundle
           bundle install
         
-      - name: Build site
+      - name: Build Jekyll site
         run: bundle exec jekyll build
         env:
           JEKYLL_ENV: production
         
-      - name: Deploy to GitHub Pages
+      # Using branch-based deployment to match repository configuration
+      # This action pushes the built site to the gh-pages branch which is
+      # what your GitHub Pages settings expect as the publishing source
+      - name: Deploy to gh-pages branch
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
-          cname: bruno.foundation
+          cname: bruno.foundation  # Preserves your custom domain
+          force_orphan: true  # Creates a clean gh-pages branch each time
