--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -38,13 +38,18 @@ jobs:
       - name: Build with Jekyll
         run: bundle exec jekyll build
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy to External Repository
         if: github.event_name != 'pull_request'
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          deploy_key: ${{ secrets.DEPLOY_KEY }}
+          external_repository: brunogama/brunogama.github.io
+          publish_branch: main
           publish_dir: ./_site
           cname: bruno.foundation
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          full_commit_message: ${{ github.event.head_commit.message }}
 
 env:
   JEKYLL_ENV: production
