--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -9,67 +9,48 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
 
-# Allow only one concurrent deployment
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: pages-${{ github.ref }}
-  cancel-in-progress: true
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      
+        uses: actions/checkout@v4
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.3.0'
           bundler-cache: true
-      
-      - name: Install dependencies
-        run: bundle install
-      
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
       - name: Build with Jekyll
-        run: bundle exec jekyll build
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
-      
+      - name: Create CNAME file
+        run: echo "bruno.foundation" > _site/CNAME
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
-        if: github.event_name != 'pull_request'
-        run: |
-          # Set up credentials for external repository
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          
-          # Debug info
-          echo "Deploying to brunogama.github.io repository..."
-          
-          # Create CNAME file
-          echo "bruno.foundation" > _site/CNAME
-          
-          # Go to build directory
-          cd _site
-          
-          # List contents to verify
-          echo "Site directory contents:"
-          ls -la
-          
-          # Initialize git repo in output directory with main as default branch
-          git init -b main
-          
-          # Debug - check remote
-          git remote -v
-          
-          git add -A
-          git commit -m "Deploy Jekyll site from Actions at $(date)"
-          
-          # Try alternative authentication method
-          echo "Pushing to destination repository..."
-          git push -vf https://x-access-token:${{ secrets.GH_PAT }}@github.com/brunogama/brunogama.github.io.git main
-          
-          echo "Deployment complete!"
-        env:
-          JEKYLL_ENV: production
+        id: deployment
+        uses: actions/deploy-pages@v4
