--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -38,10 +38,24 @@ jobs:
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+
       - name: Create CNAME file
         run: echo "bruno.foundation" > _site/CNAME
+
+      - name: Verify index.html content
+        run: |
+          echo "Checking _site/index.html for the banner..."
+          if grep -q 'TEST BANNER' _site/index.html; then
+            echo "Error: Banner text found in built index.html!"
+            exit 1
+          else
+            echo "Success: Banner text not found in built index.html."
+          fi
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+
+  # ... deploy job remains the same ...
 
   # Deployment job
   deploy:
